todo, directives, data binding, event binding

--- a/todoapp/src/app/todo/todos/todos.component.html
+++ b/todoapp/src/app/todo/todos/todos.component.html
@@ -1,9 +1,13 @@
 <div class="container">
-  <h3>{{ appTitle }}</h3>
-  <ul>
-    <li *ngFor="let todo of todos">
+  <h3 [title]="appTitle">{{ appTitle }}</h3>
+  <ul *ngIf="todos.length">
+    <li *ngFor="let todo of todos" [ngStyle]="{ color: todo.isCompleted ? 'orange' : color }" [ngClass]="{'todo--completed': todo.isCompleted }">
       {{ todo.todo }}
-      <span *ngIf="todo.isCompleted">Completed</span>
     </li>
   </ul>
+  <div *ngIf="todos.length === 0">You don't have any todos yet. Get started here <button>Add Todo</button></div>
+  <form class="todo-add-form" (ngSubmit)="handleAddTodo()">
+    <input type="text" name="todo" id="todo" placeholder="What do you want to do?" [(ngModel)]="newTodo">
+    <button *ngIf="todos.length">Add Todo</button>
+  </form>
 </div>
