styles todo app

--- a/todoapp/src/app/app.component.html
+++ b/todoapp/src/app/app.component.html
@@ -1,1 +1,13 @@
-<app-todos></app-todos>
+<div class="app">
+  <header class="header">
+    <nav class="nav">
+      <a href="" class="logo">Todo</a>
+      <menu class="navbar">
+        <li class="nav-item"><a href="" class="nav-link">Home</a></li>
+        <li class="nav-item"><a href="" class="nav-link">Todo</a></li>
+        <li class="nav-item"><a href="" class="nav-link">Register</a></li>
+      </menu>
+    </nav>
+  </header>
+  <app-todos></app-todos>
+</div>
