--- a/todoapp/src/app/todo/todos/todos.component.html
+++ b/todoapp/src/app/todo/todos/todos.component.html
@@ -1,13 +1,10 @@
-<div class="app-todos">
-  <h3 [title]="appTitle" class="todos-title">{{ appTitle }}</h3>
-  <ul *ngIf="todos.length" class="todos">
-    <li class="todos-item" *ngFor="let todo of todos" [ngStyle]="{ color: todo.isCompleted ? 'orange' : color }" [ngClass]="{'todo--completed': todo.isCompleted }">
-      {{ todo.todo }}
-    </li>
-  </ul>
-  <div *ngIf="todos.length === 0">You don't have any todos yet. Get started here <button class="button">Add Todo</button></div>
-  <form class="todo-add-form" (ngSubmit)="handleAddTodo()">
-    <input type="text" name="todo" id="todo" placeholder="What do you want to do?" [(ngModel)]="newTodo" class="form-input">
-    <button *ngIf="todos.length" class="button">Add Todo</button>
-  </form>
+<div
+  class="app-todos"
+>
+  <app-todo-header
+    [appTitle]="appTitle"
+    (addTodo)="handleAddTodo($event)"
+  ></app-todo-header>
+  <app-todo-list [todos]="todos"></app-todo-list>
+  <app-todo-footer [total]="todos.length" [completed]="completed"></app-todo-footer>
 </div>
