adds auth module

--- a/todoapp/src/app/todo/todo-footer/todo-footer.component.html
+++ b/todoapp/src/app/todo/todo-footer/todo-footer.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="todos-footer">
   <span *ngIf="completed">Completed {{ completed }}</span>
   <span *ngIf="total">Total {{ total }}</span>
 </div>
