--- a/todoapp/src/app/app.component.html
+++ b/todoapp/src/app/app.component.html
@@ -1,14 +1,13 @@
 <div class="app">
   <header class="header">
     <nav class="nav">
-      <a href="" class="logo">Todo</a>
+      <a routerLink="/" class="logo">Todo</a>
       <menu class="navbar">
-        <li class="nav-item"><a href="" class="nav-link">Home</a></li>
-        <li class="nav-item"><a href="" class="nav-link">Todo</a></li>
-        <li class="nav-item"><a href="" class="nav-link">Register</a></li>
+        <li class="nav-item"><a routerLink="/" class="nav-link">Home</a></li>
+        <li class="nav-item"><a routerLink="/todos" class="nav-link">Todo</a></li>
+        <li class="nav-item"><a routerLink="/auth/register" class="nav-link">Register</a></li>
       </menu>
     </nav>
   </header>
-  <app-todos></app-todos>
-  <button (click)="getTodos()">Get Todos</button>
+  <router-outlet></router-outlet>
 </div>
