--- a/todoapp/src/app/auth/signin/signin.component.html
+++ b/todoapp/src/app/auth/signin/signin.component.html
@@ -1,10 +1,10 @@
-<div class="app-signup">
-  <form class="form-signup">
+<div class="app-signin">
+  <form class="form-signin">
     <div class="form-group">
       <label
         for="username"
         class="sr-only"
-      >Enter your email</label>
+      >Enter your register email</label>
       <input
         type="email"
         id="username"
@@ -17,7 +17,7 @@
       <label
         for="password"
         class="sr-only"
-      >Create a password</label>
+      >Enter your password</label>
       <input
         type="password"
         id="password"
