http service with json server

--- a/todoapp/src/app/app.component.html
+++ b/todoapp/src/app/app.component.html
@@ -9,5 +9,6 @@
       </menu>
     </nav>
   </header>
+  <!-- <button (click)="getTodos()">Get todos</button> -->
   <router-outlet></router-outlet>
 </div>
