--- a/todoapp/src/app/auth/signup/signup.component.html
+++ b/todoapp/src/app/auth/signup/signup.component.html
@@ -2,14 +2,14 @@
   <form class="form-signup" (ngSubmit)="handleRegister()" [formGroup]="userForm">
     <div class="form-group">
       <label for="username" class="sr-only">Enter your email</label>
-      <input type="email" id="username" name="username" class="form-input" placeholder="Here your email" autocomplete="username" formControlName="usernameUF">
-      <small class="form-error" *ngIf="userForm.get('usernameUF')?.dirty && userForm.get('usernameUF')?.errors">
+      <input type="email" id="username" name="username" class="form-input" placeholder="Here your email" autocomplete="username" formControlName="email">
+      <small class="form-error" *ngIf="userForm.get('email')?.dirty && userForm.get('email')?.errors">
         Username is required, Username should be a valid email
       </small>
     </div>
     <div class="form-group">
       <label for="password" class="sr-only">Create a password</label>
-      <input type="password" id="password" name="password" class="form-input" placeholder="Here your password" autocomplete="current-password" formControlName="passwordUF">
+      <input type="password" id="password" name="password" class="form-input" placeholder="Here your password" autocomplete="current-password" formControlName="password">
     </div>
     <div class="form-group text-center">
       <button type="submit" class="button" [disabled]="userForm.invalid">Register</button>
