testing base setup

--- a/todoapp/src/app/todo/todo-item/todo-item.component.html
+++ b/todoapp/src/app/todo/todo-item/todo-item.component.html
@@ -2,7 +2,7 @@
   <label class="todo-toggle" [for]="todo.id">
     <input type="checkbox" name="todo-toggle" [id]="todo.id" [checked]="todo.isCompleted" (change)="handleTodoToggle($event)" />
     <span *ngIf="!isEditing">{{todo.todo }}</span>
-    <input *ngIf="isEditing" type="text" [(ngModel)]="updatedTodo" />
+    <input *ngIf="isEditing" type="text" [(ngModel)]="updatedTodo" class="form-input" />
   </label>
   <div class="todo-actions">
     <a class="button button-icon" [routerLink]="['/todos', todo.id]" *ngIf="!isDetail">Detail</a>
