--- a/todoapp/src/app/auth/signup/signup.component.html
+++ b/todoapp/src/app/auth/signup/signup.component.html
@@ -12,7 +12,7 @@
       <input type="password" id="password" name="password" class="form-input" placeholder="Here your password" autocomplete="current-password" formControlName="password">
     </div>
     <div class="form-group text-center">
-      <button type="submit" class="button" [disabled]="userForm.invalid">Register</button>
+      <button data-test-id="registerBtn" type="submit" class="button" [disabled]="userForm.invalid">Register</button>
     </div>
     <div class="form-group"><span>Already have an account <a type="button" class="button" routerLink="/auth/login">Login</a></span></div>
   </form>
