--- a/todoapp/src/app/todo/todo-header/todo-header.component.html
+++ b/todoapp/src/app/todo/todo-header/todo-header.component.html
@@ -1,7 +1,7 @@
 <h3
   [title]="title"
   class="todos-title"
->{{ title }}</h3>
+>{{ title | uppercase }}</h3>
 <form
   class="todo-add-form"
   (ngSubmit)="handleAddTodo()"
