--- a/todoapp-react/src/index.css
+++ b/todoapp-react/src/index.css
@@ -38,6 +38,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   line-height: 1.5;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #212121;
 }
 
 /* A elements that don't have a class get default styles */
@@ -76,11 +78,6 @@ select {
   }
 }
 
-body {
-  font-family: sans-serif;
-  color: #212121;
-}
-
 a,
 a:hover,
 a:focus {
@@ -115,6 +112,7 @@ a:focus {
   background-color: #fff;
   border-color: transparent;
   border-style: inset;
+  border-bottom-color: #dbdbdb;
   border-radius: 0;
   width: 100%;
 }
@@ -131,7 +129,7 @@ a:focus {
   background-color: #212121;
   color: #fff;
   cursor: pointer;
-  transition: background-color ease-in 350ms, color ease-out 350ms;
+  transition: background-color ease-in 350ms, color ease-out 350ms, transform ease-in-out 350ms;
 }
 
 .button:hover,
@@ -173,4 +171,26 @@ a:focus {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.app-auth {
+  width: min(100%, 35rem);
+  margin: 1rem auto;
+  padding: 3em 3em;
+  background-color: #fff;
+  text-align: center;
+}
+
+.auth-title {
+  line-height: 1.2;
+  margin-bottom: 2em;
+}
+
+.button-link {
+  background-color: transparent;
+  color: inherit;
+}
+.button-link:hover, .button-link:focus {
+  background-color: transparent;
+  transform: scale(1.1);
 }
